manifests/cloud/gist/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: gist
  name: gist
  namespace: cloud
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gist
  template:
    metadata:
      labels:
        app: gist
    spec:
      containers:
      - image: ghcr.io/thomiceli/opengist
        name: gist
        ports:
        - containerPort: 6157
        volumeMounts:
        - name: gist-appdata
          mountPath: /opengist
      volumes:
        - name: gist-appdata
          persistentVolumeClaim:
            claimName: gist-appdata
