manifests/cloud/gist/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: gist
  labels:
    app: gist
  namespace: cloud
spec:
  selector:
    app: gist
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 6157
      targetPort: 6157
