manifests/cloud/gist/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gist
  labels:
    app: gist
  namespace: cloud
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-staging"
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - gist.git.cafio.co
    secretName: gist-tls
  rules:
  - host: gist.git.cafio.co
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: gist
            port:
              number: 6157
